--- a/WEB_UI/Web.config
+++ b/WEB_UI/Web.config
@@ -41,12 +41,17 @@
     <add key="FLogServices" value="False" />
     <!-- сервис выполнения запросов в сап -->
     <!-- ПРОДУКТИВ -->
-
     <!-- ТЕСТ -->
-    <add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
+    <add key="sap_url" value="https://krrzpmm1.europe.mittalco.com:50001/XMII/Runner" />
     <add key="sap_transaction_is" value="?Transaction=DataTransferToRailwaySystem2.0/Loader/GetDataAboudDelivery" />
     <add key="sap_login" value="service_user" />
     <add key="sap_pass" value="IIyr8OBHnSg8oO" />
+    <!-- ТЕСТ -->
+    
+    <!--<add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
+    <add key="sap_transaction_is" value="?Transaction=DataTransferToRailwaySystem2.0/Loader/GetDataAboudDelivery" />
+    <add key="sap_login" value="service_user" />
+    <add key="sap_pass" value="IIyr8OBHnSg8oO" />-->
   </appSettings>
   <!--
     Описание изменений web.config см. по адресу http://go.microsoft.com/fwlink/?LinkId=235367.
