--- a/IDSService/App.config
+++ b/IDSService/App.config
@@ -80,6 +80,11 @@
     <add key="FLogEvent" value="True" />
     <add key="FLogServices" value="True" />
     <!-- *********** СЕРВИСЫ  ***************************************** -->
+    <!-- сервис IDS_UpdateIncomingSupply обновление входящей поставки через SAP  -->
+    <add key="ActiveUpdateIncomingSupply" value="True" />
+    <add key="IntervalUpdateIncomingSupply" value="3600" /><!-- выборка 1 раз в час -->
+    <add key="SAP_IS_DayApproachLimit" value="30" /><!-- Количество дней, ожидания вагона с подходов -->
+    <add key="SAP_IS_ExceptionsCargo" value="1;3;20;37;38;40" /><!-- Код грузов для исключения из опроса обновления по ним входящей поставки -->
     <!-- сервис TransferOutgoingOfKIS перенос из системы КИС Транспорт в ИДС RWT  -->
     <add key="ActiveTransferOutgoingOfKIS" value="True" />
     <add key="IntervalTransferOutgoingOfKIS" value="1800" /><!-- выборка 1 раз в 30 мин -->
@@ -90,15 +95,17 @@
     <add key="SMS_PORT" value="8787" />
     <!-- Получение информации о вагоне -->
     <add key="WebApiUZWagonURL" value="https://uz.gov.ua/car_info/index.php" />
-
     <!-- Сервис доступа к САП входящая и исходящая поставка -->
     <!-- ПРОДУКТИВ -->
-
-    <!-- ТЕСТ -->
-    <add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
+    <add key="sap_url" value="https://krrzpmm1.europe.mittalco.com:50001/XMII/Runner" />
     <add key="sap_transaction_is" value="?Transaction=DataTransferToRailwaySystem2.0/Loader/GetDataAboudDelivery" />
     <add key="sap_login" value="service_user" />
     <add key="sap_pass" value="IIyr8OBHnSg8oO" />
+    <!-- ТЕСТ -->
+    <!--<add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
+    <add key="sap_transaction_is" value="?Transaction=DataTransferToRailwaySystem2.0/Loader/GetDataAboudDelivery" />
+    <add key="sap_login" value="service_user" />
+    <add key="sap_pass" value="IIyr8OBHnSg8oO" />-->
   </appSettings>
   <connectionStrings>
     <add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons" />
