--- a/Test/App.config
+++ b/Test/App.config
@@ -82,20 +82,39 @@
     <add key="SMS_HOST" value="10.21.2.139" />
     <add key="SMS_PORT" value="8787" />
 
+    <!-- **************************************************************** -->
+    <!--              IDS                                                -->
+    <!-- **************************************************************** -->
+    <!-- сервис IDS_UpdateIncomingSupply обновление входящей поставки через SAP  -->
+    <add key="ActiveUpdateIncomingSupply" value="True" />
+    <add key="IntervalUpdateIncomingSupply" value="3600" />
+    <!-- выборка 1 раз в час -->
+    <add key="SAP_IS_DayApproachLimit" value="30" />
+    <!-- Количество дней, ожидания вагона с подходов -->
+    <add key="SAP_IS_ExceptionsCargo" value="1;3;20;37;38;40" />
+    <!-- Код грузов для исключения из опроса обновления по ним входящей поставки -->
+
     <!-- сервис TransferOutgoingOfKIS перенос из системы КИС Транспорт в ИДС RWT  -->
     <add key="ActiveTransferOutgoingOfKIS" value="True" />
-    <add key="IntervalTransferOutgoingOfKIS" value="1800" /><!-- выборка 1 раз в 30 мин -->
-    <add key="TransferControlTimeIntervalKIS" value="12" /><!-- выборка на 12 часов  ранее -->
-    <add key="TransferSetOutgoingWagonOfKis" value="True" /><!-- Сдавать вагоны на УЗ автоматически по данным КИС -->
-    
+    <add key="IntervalTransferOutgoingOfKIS" value="1800" />
+    <!-- выборка 1 раз в 30 мин -->
+    <add key="TransferControlTimeIntervalKIS" value="12" />
+    <!-- выборка на 12 часов  ранее -->
+    <add key="TransferSetOutgoingWagonOfKis" value="True" />
+    <!-- Сдавать вагоны на УЗ автоматически по данным КИС -->
+
     <!-- сервис выполнения запросов в сап -->
     <!-- ПРОДУКТИВ -->
-
-    <!-- ТЕСТ -->
-    <add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
+    <!-- ПРОДУКТИВ -->
+    <add key="sap_url" value="https://krrzpmm1.europe.mittalco.com:50001/XMII/Runner" />
     <add key="sap_transaction_is" value="?Transaction=DataTransferToRailwaySystem2.0/Loader/GetDataAboudDelivery" />
     <add key="sap_login" value="service_user" />
     <add key="sap_pass" value="IIyr8OBHnSg8oO" />
+    <!-- ТЕСТ -->
+    <!--<add key="sap_url" value="https://krrzdmm1.europe.mittalco.com:50001/XMII/Runner" />
+    <add key="sap_transaction_is" value="?Transaction=DataTransferToRailwaySystem2.0/Loader/GetDataAboudDelivery" />
+    <add key="sap_login" value="service_user" />
+    <add key="sap_pass" value="IIyr8OBHnSg8oO" />-->
 
 
   </appSettings>
