--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -412,6 +412,7 @@
     <Content Include="Scripts\moment.min.js.map" />
     <Content Include="Scripts\moment-with-locales.min.js.map" />
     <Content Include="Areas\Directory\Views\Home\ParkState.cshtml" />
+    <Content Include="Areas\Directory\Views\Home\ExternalStation.cshtml" />
     <None Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -968,6 +969,7 @@
     <Content Include="Scripts\view\directory\cargo.js" />
     <Content Include="Scripts\view\directory\cargo_group.js" />
     <Content Include="Scripts\view\directory\cars.js" />
+    <Content Include="Scripts\view\directory\external_station.js" />
     <Content Include="Scripts\view\directory\instructional_letters.js" />
     <Content Include="Scripts\view\directory\park_state.js" />
     <Content Include="Scripts\view\directory\wagon_marking.js" />
