add edit form Railway

--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -414,6 +414,7 @@
     <Content Include="Areas\Directory\Views\Home\ParkState.cshtml" />
     <Content Include="Areas\Directory\Views\Home\ExternalStation.cshtml" />
     <Content Include="Areas\Directory\Views\Home\InlandRailway.cshtml" />
+    <Content Include="Areas\Directory\Views\Home\Railway.cshtml" />
     <None Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -970,6 +971,7 @@
     <Content Include="Scripts\view\directory\cargo.js" />
     <Content Include="Scripts\view\directory\cargo_group.js" />
     <Content Include="Scripts\view\directory\cars.js" />
+    <Content Include="Scripts\view\directory\railway.js" />
     <Content Include="Scripts\view\directory\inland_railway.js" />
     <Content Include="Scripts\view\directory\external_station.js" />
     <Content Include="Scripts\view\directory\instructional_letters.js" />
