--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -415,6 +415,8 @@
     <Content Include="Areas\Directory\Views\Home\ExternalStation.cshtml" />
     <Content Include="Areas\Directory\Views\Home\InlandRailway.cshtml" />
     <Content Include="Areas\Directory\Views\Home\Railway.cshtml" />
+    <Content Include="Areas\Directory\Views\Home\Countrys.cshtml" />
+    <Content Include="Areas\Directory\Views\Home\Shipper.cshtml" />
     <None Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -971,6 +973,8 @@
     <Content Include="Scripts\view\directory\cargo.js" />
     <Content Include="Scripts\view\directory\cargo_group.js" />
     <Content Include="Scripts\view\directory\cars.js" />
+    <Content Include="Scripts\view\directory\countrys.js" />
+    <Content Include="Scripts\view\directory\shipper.js" />
     <Content Include="Scripts\view\directory\railway.js" />
     <Content Include="Scripts\view\directory\inland_railway.js" />
     <Content Include="Scripts\view\directory\external_station.js" />
