deverlop present wagon marking

--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -420,6 +420,7 @@
     <Content Include="Areas\Directory\Views\Home\Railway.cshtml" />
     <Content Include="Areas\Directory\Views\Home\Countrys.cshtml" />
     <Content Include="Areas\Directory\Views\Home\Shipper.cshtml" />
+    <Content Include="Areas\Directory\Views\Home\PresentWagonMarking.cshtml" />
     <None Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -983,6 +984,7 @@
     <Content Include="Scripts\view\directory\external_station.js" />
     <Content Include="Scripts\view\directory\instructional_letters.js" />
     <Content Include="Scripts\view\directory\park_state.js" />
+    <Content Include="Scripts\view\directory\present_wagon_marking.js" />
     <Content Include="Scripts\view\directory\wagon_marking.js" />
     <Content Include="Scripts\view\directory\search_wagon.js" />
     <Content Include="Scripts\view\idsmors\electronic_cards.js" />
