--- a/WEB_UI/packages.config
+++ b/WEB_UI/packages.config
@@ -42,6 +42,7 @@
   <package id="Oracle.ManagedDataAccess" version="19.8.0" targetFramework="net452" />
   <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.7.0" targetFramework="net452" />
   <package id="popper.js" version="1.16.1" targetFramework="net452" />
+  <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
