start new api arrival

--- a/Test/App.config
+++ b/Test/App.config
@@ -38,6 +38,7 @@
     <add key="WebApiMTUser" value="Arcelor1" />
     <add key="WebApiMTPSW" value="12345678-" />
     <add key="WebApiMTApi" value="/api/WagonsTracking" />
+    <add key="WebApiMTArrivalApi" value="/api/TrainNaturList/Get" />    
     <!-- *********** СЕРВИСЫ ******************************************** -->
     <!-- **************************************************************** -->
     <!--              METRANS                                             -->
