--- a/Test/App.config
+++ b/Test/App.config
@@ -38,7 +38,8 @@
     <add key="WebApiMTUser" value="Arcelor1" />
     <add key="WebApiMTPSW" value="12345678-" />
     <add key="WebApiMTApi" value="/api/WagonsTracking" />
-    <add key="WebApiMTArrivalApi" value="/api/TrainNaturList/Get" />    
+    <add key="WebApiMTArrivalApi" value="/api/TrainNaturList" />
+    <!--https://inform.umtrans.com.ua/api/TrainNaturList/ConfirmDelivery?id=-->
     <!-- *********** СЕРВИСЫ ******************************************** -->
     <!-- **************************************************************** -->
     <!--              METRANS                                             -->
@@ -122,8 +123,8 @@
   <connectionStrings>
     <add name="log" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="UZ" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <!--<add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-Test-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="metrans" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="metrans_test" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-Test-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
     <add name="IDS" connectionString="data source=krr-sql-paclx03;initial catalog=KRR-PA-CNT-Railway;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="SMS" connectionString="data source=krr-sql-paclx02;initial catalog=KRR-PA-VIZ-Other_DATA;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="KIS" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=wagons;Password=trans_01;Data Source=Wagons" />
