off transfer xml-file services metrans

--- a/MetransService/App.config
+++ b/MetransService/App.config
@@ -108,9 +108,9 @@
     <add key="IntervalTransferApproaches" value="300" />
     <add key="DeleteFileTransferApproaches" value="True" />
     <!-- сервис TransferArrival перенос из файлов xml в базу данных METRANS  -->
-    <add key="ActiveTransferArrival" value="True" />
+    <add key="ActiveTransferArrival" value="false" />
     <add key="IntervalTransferArrival" value="300" />
-    <add key="ArrivalToRailWay" value="True" />
+    <add key="ArrivalToRailWay" value="false" />
     <add key="DeleteFileTransferArrival" value="True" />
     <add key="DayRangeArrivalCars" value="5" />
     <!--Подключение к Модулю согласования-->
