module form-edit-validation

--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -2068,7 +2068,7 @@
     <Content Include="Scripts\jszip.min.js" />
     <Content Include="Scripts\module\form_validation.js" />
     <Content Include="Scripts\module\cblist_station.js" />
-    <Content Include="Scripts\module\form_dir_way.js" />
+    <Content Include="Scripts\module\form_edit.js" />
     <Content Include="Scripts\module\table_dir_way.js" />
     <Content Include="Scripts\module\table_tree_way.js" />
     <Content Include="Scripts\module\table_outgoing.js" />
