--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -275,7 +275,7 @@
     <Compile Include="Controllers\api\Directoty\IDS_Directory_TypesRepairsWagonsController.cs" />
     <Compile Include="Controllers\api\Directoty\IDS_Directory_WagonManufacturersController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_OutgoingDetentionReturnController.cs" />
-    <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_WagonInternalMovementController - Копировать.cs" />
+    <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_WagonInternalOperationController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_WagonInternalMovementController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_WagonInternalRoutesController.cs" />
     <Compile Include="Controllers\api\IDS\RWT\IDS_RWT_OutgoingCarsController.cs" />
