--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -2009,10 +2009,11 @@
     <Content Include="Content\fontawesome-free\webfonts\fa-regular-400.svg" />
     <Content Include="Content\fontawesome-free\webfonts\fa-solid-900.svg" />
     <Content Include="Content\module\cblist_station.css" />
-    <Content Include="Content\module\form_edit_table.css" />
+    <Content Include="Content\module\modal_edit_form.css" />
     <Content Include="Content\module\table_dir_way.css" />
     <Content Include="Content\module\table_tree_way.css" />
     <Content Include="Content\view\admin\_layout.css" />
+    <Content Include="Content\view\directory\ways.css" />
     <Content Include="Content\view\directory\search_wagon.css" />
     <Content Include="Content\view\shared\print_way.css" />
     <Content Include="Content\view\shared\print_gfa.css" />
@@ -2151,6 +2152,7 @@
     <Content Include="Content\fontawesome-free\webfonts\fa-solid-900.woff2" />
     <Content Include="Areas\Admin\Views\Home\ErrorLog.cshtml" />
     <Content Include="Areas\IDSRWT\Views\Home\TEST.cshtml" />
+    <Content Include="Areas\Directory\Views\Home\Ways.cshtml" />
     <None Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -2677,6 +2679,7 @@
     <Content Include="Scripts\view\directory\cargo_group.js" />
     <Content Include="Scripts\view\directory\cars.js" />
     <Content Include="Scripts\view\directory\countrys.js" />
+    <Content Include="Scripts\view\directory\main_ways.js" />
     <Content Include="Scripts\view\directory\main_search_wagon.js" />
     <Content Include="Scripts\view\directory\shipper.js" />
     <Content Include="Scripts\view\directory\railway.js" />
@@ -2696,6 +2699,7 @@
     <Content Include="Scripts\view\idsrwt\test.js" />
     <Content Include="Scripts\view\idsrwt\wsd.js" />
     <Content Include="Scripts\view\shared\common.js" />
+    <Content Include="Scripts\module\common.js" />
     <Content Include="Scripts\view\shared\_ids.js" />
     <Content Include="Scripts\view\shared\_idsdirectory.js" />
     <Content Include="Web.config">
