--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -2020,6 +2020,7 @@
     <Content Include="Images\8m.png" />
     <Content Include="Images\directory\line-icon-3_.svg" />
     <Content Include="Images\idsrwt\wsd\eye-solid.svg" />
+    <Content Include="Scripts\api\ids_direct.js" />
     <Content Include="Scripts\api\ids_global.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
