module del module table_dir_park add module table_dir_park_station  + functionl auto\down\up add module table_dir_park_ways  + form edit park (functional add:not api)

--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -2009,6 +2009,7 @@
     <Content Include="Content\fontawesome-free\webfonts\fa-regular-400.svg" />
     <Content Include="Content\fontawesome-free\webfonts\fa-solid-900.svg" />
     <Content Include="Content\module\cblist_station.css" />
+    <Content Include="Content\module\directory\table_dir_park_ways.css" />
     <Content Include="Content\module\shared\modal_edit_form.css" />
     <Content Include="Content\module\directory\table_dir_way.css" />
     <Content Include="Content\module\table_tree_way.css" />
@@ -2068,7 +2069,8 @@
     <Content Include="Scripts\jquery.doubleScroll.js" />
     <Content Include="Scripts\jszip.js" />
     <Content Include="Scripts\jszip.min.js" />
-    <Content Include="Scripts\module\directory\table_dir_park.js" />
+    <Content Include="Scripts\module\directory\table_dir_park_ways.js" />
+    <Content Include="Scripts\module\directory\table_dir_park_station.js" />
     <Content Include="Scripts\module\shared\modal_confirm_form.js" />
     <Content Include="Scripts\module\shared\modal_edit_form.js" />
     <Content Include="Scripts\module\shared\form_validation.js" />
