--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -2158,6 +2158,7 @@
     <Content Include="Areas\Admin\Views\Home\ErrorLog.cshtml" />
     <Content Include="Areas\IDSRWT\Views\Home\TEST.cshtml" />
     <Content Include="Areas\Directory\Views\Home\Ways.cshtml" />
+    <Content Include="Areas\Directory\Views\Home\Park.cshtml" />
     <None Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -2684,6 +2685,7 @@
     <Content Include="Scripts\view\directory\cargo_group.js" />
     <Content Include="Scripts\view\directory\cars.js" />
     <Content Include="Scripts\view\directory\countrys.js" />
+    <Content Include="Scripts\view\directory\main_park.js" />
     <Content Include="Scripts\view\directory\main_ways.js" />
     <Content Include="Scripts\view\directory\main_search_wagon.js" />
     <Content Include="Scripts\view\directory\shipper.js" />
