--- a/WEB_UI/Web.config
+++ b/WEB_UI/Web.config
@@ -61,10 +61,9 @@
       </system.Web>
   -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="false" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5" requestPathInvalidCharacters="&lt;,&gt;,%,&amp;,*,\,?" maxUrlLength="2048" maxQueryStringLength="32768" />
     <authentication mode="Windows" />
-
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true">
