Изменение функционала отправки и принятия составов на АМКР 1 Изменение базы данных   - изменил WIR (добавил поля и связь с WIO   - добавил 2 таблицы составы и вагоны отправки   - добавил связи между таблицами 2. Добавил код   - новые класы таблиц   - перестроил WIR   - перестроил и добаил функции ids_library   - подключил к WEB через Ninject

--- a/EFIDS/EFIDS.csproj
+++ b/EFIDS/EFIDS.csproj
@@ -108,6 +108,8 @@
     <Compile Include="Concrete\Directory\EFDirectory_WagonManufacturers.cs" />
     <Compile Include="Concrete\Directory\EFDirectory_GenusWagons.cs" />
     <Compile Include="Concrete\EFRepository.cs" />
+    <Compile Include="Concrete\RWT\EFInternalMovementCars.cs" />
+    <Compile Include="Concrete\RWT\EFInternalMovementSostav.cs" />
     <Compile Include="Concrete\RWT\EFOutgoing_UZ_Document_Pay.cs" />
     <Compile Include="Concrete\RWT\EFOutgoing_UZ_Document.cs" />
     <Compile Include="Concrete\RWT\EFOutgoing_UZ_Vagon_Pay.cs" />
@@ -229,6 +231,8 @@
     <Compile Include="Entities\RWT\Outgoing_UZ_Vagon_Acts.cs" />
     <Compile Include="Entities\RWT\Outgoing_UZ_Vagon_Cont.cs" />
     <Compile Include="Entities\RWT\Outgoing_UZ_Vagon_Pay.cs" />
+    <Compile Include="Entities\RWT\InternalMovementCars.cs" />
+    <Compile Include="Entities\RWT\InternalMovementSostav.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -237,6 +241,9 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
