--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -2016,6 +2016,7 @@
     <Content Include="Content\module\table_tree_way.css" />
     <Content Include="Content\module\wsd\operation_send.css" />
     <Content Include="Content\module\wsd\table_cars_operation.css" />
+    <Content Include="Content\module\wsd\view_send_cars.css" />
     <Content Include="Content\view\admin\_layout.css" />
     <Content Include="Content\view\directory\ways.css" />
     <Content Include="Content\view\directory\search_wagon.css" />
@@ -2090,6 +2091,7 @@
     <Content Include="Scripts\module\wsd\operation_arrival.js" />
     <Content Include="Scripts\module\wsd\operation_send.js" />
     <Content Include="Scripts\module\wsd\table_cars_operation.js" />
+    <Content Include="Scripts\module\wsd\view_send_cars.js" />
     <Content Include="Scripts\moment-with-locales.js" />
     <Content Include="Scripts\moment-with-locales.min.js" />
     <Content Include="Scripts\moment.js" />
