--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -2009,6 +2009,7 @@
     <Content Include="Content\fontawesome-free\webfonts\fa-regular-400.svg" />
     <Content Include="Content\fontawesome-free\webfonts\fa-solid-900.svg" />
     <Content Include="Content\module\cblist_station.css" />
+    <Content Include="Content\module\directory\table_dir_operators_wagons.css" />
     <Content Include="Content\module\directory\table_dir_park_station.css" />
     <Content Include="Content\module\directory\table_dir_park_ways.css" />
     <Content Include="Content\module\shared\modal_edit_form.css" />
@@ -2075,6 +2076,7 @@
     <Content Include="Scripts\jquery.doubleScroll.js" />
     <Content Include="Scripts\jszip.js" />
     <Content Include="Scripts\jszip.min.js" />
+    <Content Include="Scripts\module\directory\table_dir_operators_wagons.js" />
     <Content Include="Scripts\module\directory\table_dir_park_ways.js" />
     <Content Include="Scripts\module\directory\table_dir_park_station.js" />
     <Content Include="Scripts\module\shared\modal_confirm_form.js" />
@@ -2169,6 +2171,7 @@
     <Content Include="Areas\IDSRWT\Views\Home\TEST.cshtml" />
     <Content Include="Areas\Directory\Views\Home\Ways.cshtml" />
     <Content Include="Areas\Directory\Views\Home\Park.cshtml" />
+    <Content Include="Areas\Directory\Views\Home\OperatorsWagons.cshtml" />
     <None Include="_app_offline.htm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
@@ -2696,6 +2699,7 @@
     <Content Include="Scripts\view\directory\cars.js" />
     <Content Include="Scripts\view\directory\countrys.js" />
     <Content Include="Scripts\view\directory\main_park.js" />
+    <Content Include="Scripts\view\directory\main_operators_wagons.js" />
     <Content Include="Scripts\view\directory\main_ways.js" />
     <Content Include="Scripts\view\directory\main_search_wagon.js" />
     <Content Include="Scripts\view\directory\shipper.js" />
