Добавил новые заготовки Модулей  + table_cars_outer_way  + table_sostav_outer_way  + view_arrival_cars

--- a/WEB_UI/WEB_UI.csproj
+++ b/WEB_UI/WEB_UI.csproj
@@ -2018,7 +2018,10 @@
     <Content Include="Content\module\table_tree_way.css" />
     <Content Include="Content\module\wsd\operation_send.css" />
     <Content Include="Content\module\wsd\table_cars_operation.css" />
+    <Content Include="Content\module\wsd\table_sostav_outer_way.css" />
+    <Content Include="Content\module\wsd\table_cars_outer_way.css" />
     <Content Include="Content\module\wsd\table_cars_way.css" />
+    <Content Include="Content\module\wsd\view_arrival_cars.css" />
     <Content Include="Content\module\wsd\view_send_cars.css" />
     <Content Include="Content\view\admin\_layout.css" />
     <Content Include="Content\view\directory\ways.css" />
@@ -2096,7 +2099,10 @@
     <Content Include="Scripts\module\wsd\operation_arrival.js" />
     <Content Include="Scripts\module\wsd\operation_send.js" />
     <Content Include="Scripts\module\wsd\table_cars_operation.js" />
+    <Content Include="Scripts\module\wsd\table_sostav_outer_way.js" />
+    <Content Include="Scripts\module\wsd\table_cars_outer_way.js" />
     <Content Include="Scripts\module\wsd\table_cars_way.js" />
+    <Content Include="Scripts\module\wsd\view_arrival_cars.js" />
     <Content Include="Scripts\module\wsd\view_send_cars.js" />
     <Content Include="Scripts\moment-with-locales.js" />
     <Content Include="Scripts\moment-with-locales.min.js" />
